# Aaru.Compression.Native

./: .clang-format  .gitignore  .gitmodules  Aaru.Compression.Native.nuspec  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  README.md  adc.c  adc.h  apple_rle.c  apple_rle.h  build.sh  flac.c  flac.h  library.c  library.h  lzip.c  lzip.h
docker/: dockcross-linux-arm  dockcross-linux-arm64  dockcross-linux-mips64  dockcross-linux-musl-arm  dockcross-linux-s390x  dockcross-linux-x64  dockcross-linux-x86  dockcross-win-x64  dockcross-win-x86
tests/: CMakeLists.txt  adc.cpp  apple_rle.cpp  bzip2.cpp  crc32.c  crc32.h  flac.cpp  lzfse.cpp  lzip.cpp  lzma.cpp  zstd.cpp
tests/data/: bzip2.bz2  lzip.lz  zstd.zst
